logs/ckanext-showcase.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/ckanext'...
Listing './lib/python3.5/site-packages/ckanext/showcase'...
Listing './lib/python3.5/site-packages/ckanext/showcase/commands'...
Compiling './lib/python3.5/site-packages/ckanext/showcase/controller.py'...
***   File "./lib/python3.5/site-packages/ckanext/showcase/controller.py", line 507
    except SearchError, se:
                      ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/ckanext/showcase/i18n'...
Listing './lib/python3.5/site-packages/ckanext/showcase/i18n/es'...
Listing './lib/python3.5/site-packages/ckanext/showcase/i18n/es/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/ckanext/showcase/logic'...
Listing './lib/python3.5/site-packages/ckanext/showcase/logic/action'...
Listing './lib/python3.5/site-packages/ckanext/showcase/model'...
Listing './lib/python3.5/site-packages/ckanext/showcase/public'...
Listing './lib/python3.5/site-packages/ckanext/showcase/templates'...
Listing './lib/python3.5/site-packages/ckanext/showcase/templates/admin'...
Listing './lib/python3.5/site-packages/ckanext/showcase/templates/home'...
Listing './lib/python3.5/site-packages/ckanext/showcase/templates/home/snippets'...
Listing './lib/python3.5/site-packages/ckanext/showcase/templates/package'...
Listing './lib/python3.5/site-packages/ckanext/showcase/templates/showcase'...
Listing './lib/python3.5/site-packages/ckanext/showcase/templates/showcase/snippets'...
Listing './lib/python3.5/site-packages/ckanext/showcase/tests'...
Listing './lib/python3.5/site-packages/ckanext/showcase/tests/action'...
Listing './lib/python3.5/site-packages/ckanext_showcase-1.0.3.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
